yyparse.output
Terminals unused in grammar

   TOK_BLOCK
   TOK_CALL
   TOK_IFELSE
   TOK_INITDECL
   TOK_INDEX
   TOK_NEG
   TOK_NEWARRAY
   TOK_FIELD
   TOK_ROOT
   TOK_DECLID
   TOK_NEWSTRING
   TOK_PARAMLIST
   TOK_PARAM
   TOK_FUNCTION
   TOK_RETURNVOID
   TOK_DUMMY
   TOK_VARDECL
   TOK_PROTOTYPE


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program structdef
    3        | program function
    4        | program statement
    5        | program error '}'
    6        | program error ';'
    7        | /* empty */

    8 function: identdecl identdeclst ')' funcblock
    9         | identdecl '(' ')' funcblock
   10         | identdecl identdeclst ')' ';'
   11         | identdecl '(' ')' ';'

   12 identdeclst: identdeclst ',' identdecl
   13            | '(' identdecl

   14 identdecl: basetype TOK_ARRAY TOK_IDENT
   15          | basetype TOK_IDENT
   16          | TOK_IDENT TOK_ARRAY TOK_IDENT
   17          | TOK_IDENT TOK_IDENT

   18 structdef: TOK_STRUCT TOK_IDENT fielddeclst '}'
   19          | TOK_STRUCT TOK_IDENT '{' '}'

   20 fielddeclst: fielddeclst fielddecl
   21            | '{' fielddecl

   22 fielddecl: basetype TOK_ARRAY TOK_IDENT ';'
   23          | basetype TOK_IDENT ';'
   24          | TOK_IDENT TOK_ARRAY TOK_IDENT ';'
   25          | TOK_IDENT TOK_IDENT ';'

   26 block: stmtlist '}'
   27      | '{' '}'
   28      | ';'

   29 funcblock: stmtlist '}'
   30          | '{' '}'

   31 stmtlist: stmtlist statement
   32         | '{' statement

   33 statement: block
   34          | vardecl
   35          | expr ';'
   36          | while
   37          | ifelse
   38          | return

   39 while: TOK_WHILE '(' expr ')' statement

   40 ifelse: if else
   41       | if

   42 if: TOK_IF '(' expr ')' statement

   43 else: TOK_ELSE statement

   44 return: TOK_RETURN expr ';'
   45       | TOK_RETURN ';'

   46 basetype: TOK_VOID
   47         | TOK_BOOL
   48         | TOK_CHAR
   49         | TOK_INT
   50         | TOK_STRING
   51         | TOK_TYPEID

   52 argslist: argslist ',' expr
   53         | '(' expr

   54 expr: allocator
   55     | call
   56     | variable
   57     | constant
   58     | expr '=' expr
   59     | expr TOK_EQ expr
   60     | expr TOK_NE expr
   61     | expr TOK_LT expr
   62     | expr TOK_LE expr
   63     | expr TOK_GT expr
   64     | expr TOK_GE expr
   65     | expr '+' expr
   66     | expr '-' expr
   67     | expr '/' expr
   68     | expr '*' expr
   69     | expr '%' expr
   70     | '-' expr
   71     | '+' expr
   72     | TOK_ORD expr
   73     | TOK_CHR expr
   74     | '!' expr
   75     | '.' expr
   76     | '(' expr ')'

   77 vardecl: identdecl '=' expr ';'

   78 allocator: TOK_NEW TOK_IDENT '(' ')'
   79          | TOK_NEW TOK_STRING '(' expr ')'
   80          | TOK_NEW basetype '[' expr ']'
   81          | TOK_NEW TOK_IDENT '[' expr ']'

   82 call: TOK_IDENT argslist ')'
   83     | TOK_IDENT '(' ')'

   84 variable: expr '[' expr ']'
   85         | TOK_IDENT
   86         | expr '.' TOK_IDENT

   87 constant: TOK_INTCON
   88         | TOK_CHARCON
   89         | TOK_STRINGCON
   90         | TOK_FALSE
   91         | TOK_TRUE
   92         | TOK_NULL


Terminals, with rules where they appear

$end (0) 0
'!' (33) 74
'%' (37) 69
'(' (40) 9 11 13 39 42 53 76 78 79 83
')' (41) 8 9 10 11 39 42 76 78 79 82 83
'*' (42) 68
'+' (43) 65 71
',' (44) 12 52
'-' (45) 66 70
'.' (46) 75 86
'/' (47) 67
';' (59) 6 10 11 22 23 24 25 28 35 44 45 77
'=' (61) 58 77
'[' (91) 80 81 84
']' (93) 80 81 84
'{' (123) 19 21 27 30 32
'}' (125) 5 18 19 26 27 29 30
error (256) 5 6
TOK_VOID (258) 46
TOK_BOOL (259) 47
TOK_CHAR (260) 48
TOK_INT (261) 49
TOK_STRING (262) 50 79
TOK_IF (263) 42
TOK_ELSE (264) 43
TOK_WHILE (265) 39
TOK_RETURN (266) 44 45
TOK_STRUCT (267) 18 19
TOK_FALSE (268) 90
TOK_TRUE (269) 91
TOK_NULL (270) 92
TOK_NEW (271) 78 79 80 81
TOK_ARRAY (272) 14 16 22 24
TOK_EQ (273) 59
TOK_NE (274) 60
TOK_LT (275) 61
TOK_LE (276) 62
TOK_GT (277) 63
TOK_GE (278) 64
TOK_IDENT (279) 14 15 16 17 18 19 22 23 24 25 78 81 82 83 85 86
TOK_INTCON (280) 87
TOK_CHARCON (281) 88
TOK_STRINGCON (282) 89
TOK_BLOCK (283)
TOK_CALL (284)
TOK_IFELSE (285)
TOK_INITDECL (286)
TOK_INDEX (287)
TOK_POS (288)
TOK_NEG (289)
TOK_NEWARRAY (290)
TOK_TYPEID (291) 51
TOK_FIELD (292)
TOK_ORD (293) 72
TOK_CHR (294) 73
TOK_ROOT (295)
TOK_DECLID (296)
TOK_NEWSTRING (297)
TOK_PARAMLIST (298)
TOK_PARAM (299)
TOK_FUNCTION (300)
TOK_RETURNVOID (301)
TOK_DUMMY (302)
TOK_VARDECL (303)
TOK_PROTOTYPE (304)


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
start (67)
    on left: 1, on right: 0
program (68)
    on left: 2 3 4 5 6 7, on right: 1 2 3 4 5 6
function (69)
    on left: 8 9 10 11, on right: 3
identdeclst (70)
    on left: 12 13, on right: 8 10 12
identdecl (71)
    on left: 14 15 16 17, on right: 8 9 10 11 12 13 77
structdef (72)
    on left: 18 19, on right: 2
fielddeclst (73)
    on left: 20 21, on right: 18 20
fielddecl (74)
    on left: 22 23 24 25, on right: 20 21
block (75)
    on left: 26 27 28, on right: 33
funcblock (76)
    on left: 29 30, on right: 8 9
stmtlist (77)
    on left: 31 32, on right: 26 29 31
statement (78)
    on left: 33 34 35 36 37 38, on right: 4 31 32 39 42 43
while (79)
    on left: 39, on right: 36
ifelse (80)
    on left: 40 41, on right: 37
if (81)
    on left: 42, on right: 40 41
else (82)
    on left: 43, on right: 40
return (83)
    on left: 44 45, on right: 38
basetype (84)
    on left: 46 47 48 49 50 51, on right: 14 15 22 23 80
argslist (85)
    on left: 52 53, on right: 52 82
expr (86)
    on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
    72 73 74 75 76, on right: 35 39 42 44 52 53 58 59 60 61 62 63 64
    65 66 67 68 69 70 71 72 73 74 75 76 77 79 80 81 84 86
vardecl (87)
    on left: 77, on right: 34
allocator (88)
    on left: 78 79 80 81, on right: 54
call (89)
    on left: 82 83, on right: 55
variable (90)
    on left: 84 85 86, on right: 56
constant (91)
    on left: 87 88 89 90 91 92, on right: 57


state 0

    0 $accept: . start $end

    $default  reduce using rule 7 (program)

    start    go to state 1
    program  go to state 2


state 1

    0 $accept: start . $end

    $end  shift, and go to state 3


state 2

    1 start: program .
    2 program: program . structdef
    3        | program . function
    4        | program . statement
    5        | program . error '}'
    6        | program . error ';'

    error          shift, and go to state 4
    TOK_VOID       shift, and go to state 5
    TOK_BOOL       shift, and go to state 6
    TOK_CHAR       shift, and go to state 7
    TOK_INT        shift, and go to state 8
    TOK_STRING     shift, and go to state 9
    TOK_IF         shift, and go to state 10
    TOK_WHILE      shift, and go to state 11
    TOK_RETURN     shift, and go to state 12
    TOK_STRUCT     shift, and go to state 13
    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 18
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_TYPEID     shift, and go to state 22
    TOK_ORD        shift, and go to state 23
    TOK_CHR        shift, and go to state 24
    '('            shift, and go to state 25
    '{'            shift, and go to state 26
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '!'            shift, and go to state 29
    '.'            shift, and go to state 30
    ';'            shift, and go to state 31

    $end  reduce using rule 1 (start)

    function   go to state 32
    identdecl  go to state 33
    structdef  go to state 34
    block      go to state 35
    stmtlist   go to state 36
    statement  go to state 37
    while      go to state 38
    ifelse     go to state 39
    if         go to state 40
    return     go to state 41
    basetype   go to state 42
    expr       go to state 43
    vardecl    go to state 44
    allocator  go to state 45
    call       go to state 46
    variable   go to state 47
    constant   go to state 48


state 3

    0 $accept: start $end .

    $default  accept


state 4

    5 program: program error . '}'
    6        | program error . ';'

    '}'  shift, and go to state 49
    ';'  shift, and go to state 50


state 5

   46 basetype: TOK_VOID .

    $default  reduce using rule 46 (basetype)


state 6

   47 basetype: TOK_BOOL .

    $default  reduce using rule 47 (basetype)


state 7

   48 basetype: TOK_CHAR .

    $default  reduce using rule 48 (basetype)


state 8

   49 basetype: TOK_INT .

    $default  reduce using rule 49 (basetype)


state 9

   50 basetype: TOK_STRING .

    $default  reduce using rule 50 (basetype)


state 10

   42 if: TOK_IF . '(' expr ')' statement

    '('  shift, and go to state 51


state 11

   39 while: TOK_WHILE . '(' expr ')' statement

    '('  shift, and go to state 52


state 12

   44 return: TOK_RETURN . expr ';'
   45       | TOK_RETURN . ';'

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 53
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 23
    TOK_CHR        shift, and go to state 24
    '('            shift, and go to state 25
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '!'            shift, and go to state 29
    '.'            shift, and go to state 30
    ';'            shift, and go to state 54

    expr       go to state 55
    allocator  go to state 45
    call       go to state 46
    variable   go to state 47
    constant   go to state 48


state 13

   18 structdef: TOK_STRUCT . TOK_IDENT fielddeclst '}'
   19          | TOK_STRUCT . TOK_IDENT '{' '}'

    TOK_IDENT  shift, and go to state 56


state 14

   90 constant: TOK_FALSE .

    $default  reduce using rule 90 (constant)


state 15

   91 constant: TOK_TRUE .

    $default  reduce using rule 91 (constant)


state 16

   92 constant: TOK_NULL .

    $default  reduce using rule 92 (constant)


state 17

   78 allocator: TOK_NEW . TOK_IDENT '(' ')'
   79          | TOK_NEW . TOK_STRING '(' expr ')'
   80          | TOK_NEW . basetype '[' expr ']'
   81          | TOK_NEW . TOK_IDENT '[' expr ']'

    TOK_VOID    shift, and go to state 5
    TOK_BOOL    shift, and go to state 6
    TOK_CHAR    shift, and go to state 7
    TOK_INT     shift, and go to state 8
    TOK_STRING  shift, and go to state 57
    TOK_IDENT   shift, and go to state 58
    TOK_TYPEID  shift, and go to state 22

    basetype  go to state 59


state 18

   16 identdecl: TOK_IDENT . TOK_ARRAY TOK_IDENT
   17          | TOK_IDENT . TOK_IDENT
   82 call: TOK_IDENT . argslist ')'
   83     | TOK_IDENT . '(' ')'
   85 variable: TOK_IDENT .

    TOK_ARRAY  shift, and go to state 60
    TOK_IDENT  shift, and go to state 61
    '('        shift, and go to state 62

    $default  reduce using rule 85 (variable)

    argslist  go to state 63


state 19

   87 constant: TOK_INTCON .

    $default  reduce using rule 87 (constant)


state 20

   88 constant: TOK_CHARCON .

    $default  reduce using rule 88 (constant)


state 21

   89 constant: TOK_STRINGCON .

    $default  reduce using rule 89 (constant)


state 22

   51 basetype: TOK_TYPEID .

    $default  reduce using rule 51 (basetype)


state 23

   72 expr: TOK_ORD . expr

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 53
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 23
    TOK_CHR        shift, and go to state 24
    '('            shift, and go to state 25
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '!'            shift, and go to state 29
    '.'            shift, and go to state 30

    expr       go to state 64
    allocator  go to state 45
    call       go to state 46
    variable   go to state 47
    constant   go to state 48


state 24

   73 expr: TOK_CHR . expr

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 53
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 23
    TOK_CHR        shift, and go to state 24
    '('            shift, and go to state 25
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '!'            shift, and go to state 29
    '.'            shift, and go to state 30

    expr       go to state 65
    allocator  go to state 45
    call       go to state 46
    variable   go to state 47
    constant   go to state 48


state 25

   76 expr: '(' . expr ')'

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 53
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 23
    TOK_CHR        shift, and go to state 24
    '('            shift, and go to state 25
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '!'            shift, and go to state 29
    '.'            shift, and go to state 30

    expr       go to state 66
    allocator  go to state 45
    call       go to state 46
    variable   go to state 47
    constant   go to state 48


state 26

   27 block: '{' . '}'
   32 stmtlist: '{' . statement

    TOK_VOID       shift, and go to state 5
    TOK_BOOL       shift, and go to state 6
    TOK_CHAR       shift, and go to state 7
    TOK_INT        shift, and go to state 8
    TOK_STRING     shift, and go to state 9
    TOK_IF         shift, and go to state 10
    TOK_WHILE      shift, and go to state 11
    TOK_RETURN     shift, and go to state 12
    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 18
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_TYPEID     shift, and go to state 22
    TOK_ORD        shift, and go to state 23
    TOK_CHR        shift, and go to state 24
    '('            shift, and go to state 25
    '{'            shift, and go to state 26
    '}'            shift, and go to state 67
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '!'            shift, and go to state 29
    '.'            shift, and go to state 30
    ';'            shift, and go to state 31

    identdecl  go to state 68
    block      go to state 35
    stmtlist   go to state 36
    statement  go to state 69
    while      go to state 38
    ifelse     go to state 39
    if         go to state 40
    return     go to state 41
    basetype   go to state 42
    expr       go to state 43
    vardecl    go to state 44
    allocator  go to state 45
    call       go to state 46
    variable   go to state 47
    constant   go to state 48


state 27

   71 expr: '+' . expr

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 53
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 23
    TOK_CHR        shift, and go to state 24
    '('            shift, and go to state 25
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '!'            shift, and go to state 29
    '.'            shift, and go to state 30

    expr       go to state 70
    allocator  go to state 45
    call       go to state 46
    variable   go to state 47
    constant   go to state 48


state 28

   70 expr: '-' . expr

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 53
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 23
    TOK_CHR        shift, and go to state 24
    '('            shift, and go to state 25
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '!'            shift, and go to state 29
    '.'            shift, and go to state 30

    expr       go to state 71
    allocator  go to state 45
    call       go to state 46
    variable   go to state 47
    constant   go to state 48


state 29

   74 expr: '!' . expr

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 53
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 23
    TOK_CHR        shift, and go to state 24
    '('            shift, and go to state 25
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '!'            shift, and go to state 29
    '.'            shift, and go to state 30

    expr       go to state 72
    allocator  go to state 45
    call       go to state 46
    variable   go to state 47
    constant   go to state 48


state 30

   75 expr: '.' . expr

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 53
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 23
    TOK_CHR        shift, and go to state 24
    '('            shift, and go to state 25
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '!'            shift, and go to state 29
    '.'            shift, and go to state 30

    expr       go to state 73
    allocator  go to state 45
    call       go to state 46
    variable   go to state 47
    constant   go to state 48


state 31

   28 block: ';' .

    $default  reduce using rule 28 (block)


state 32

    3 program: program function .

    $default  reduce using rule 3 (program)


state 33

    8 function: identdecl . identdeclst ')' funcblock
    9         | identdecl . '(' ')' funcblock
   10         | identdecl . identdeclst ')' ';'
   11         | identdecl . '(' ')' ';'
   77 vardecl: identdecl . '=' expr ';'

    '('  shift, and go to state 74
    '='  shift, and go to state 75

    identdeclst  go to state 76


state 34

    2 program: program structdef .

    $default  reduce using rule 2 (program)


state 35

   33 statement: block .

    $default  reduce using rule 33 (statement)


state 36

   26 block: stmtlist . '}'
   31 stmtlist: stmtlist . statement

    TOK_VOID       shift, and go to state 5
    TOK_BOOL       shift, and go to state 6
    TOK_CHAR       shift, and go to state 7
    TOK_INT        shift, and go to state 8
    TOK_STRING     shift, and go to state 9
    TOK_IF         shift, and go to state 10
    TOK_WHILE      shift, and go to state 11
    TOK_RETURN     shift, and go to state 12
    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 18
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_TYPEID     shift, and go to state 22
    TOK_ORD        shift, and go to state 23
    TOK_CHR        shift, and go to state 24
    '('            shift, and go to state 25
    '{'            shift, and go to state 26
    '}'            shift, and go to state 77
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '!'            shift, and go to state 29
    '.'            shift, and go to state 30
    ';'            shift, and go to state 31

    identdecl  go to state 68
    block      go to state 35
    stmtlist   go to state 36
    statement  go to state 78
    while      go to state 38
    ifelse     go to state 39
    if         go to state 40
    return     go to state 41
    basetype   go to state 42
    expr       go to state 43
    vardecl    go to state 44
    allocator  go to state 45
    call       go to state 46
    variable   go to state 47
    constant   go to state 48


state 37

    4 program: program statement .

    $default  reduce using rule 4 (program)


state 38

   36 statement: while .

    $default  reduce using rule 36 (statement)


state 39

   37 statement: ifelse .

    $default  reduce using rule 37 (statement)


state 40

   40 ifelse: if . else
   41       | if .

    TOK_ELSE  shift, and go to state 79

    $default  reduce using rule 41 (ifelse)

    else  go to state 80


state 41

   38 statement: return .

    $default  reduce using rule 38 (statement)


state 42

   14 identdecl: basetype . TOK_ARRAY TOK_IDENT
   15          | basetype . TOK_IDENT

    TOK_ARRAY  shift, and go to state 81
    TOK_IDENT  shift, and go to state 82


state 43

   35 statement: expr . ';'
   58 expr: expr . '=' expr
   59     | expr . TOK_EQ expr
   60     | expr . TOK_NE expr
   61     | expr . TOK_LT expr
   62     | expr . TOK_LE expr
   63     | expr . TOK_GT expr
   64     | expr . TOK_GE expr
   65     | expr . '+' expr
   66     | expr . '-' expr
   67     | expr . '/' expr
   68     | expr . '*' expr
   69     | expr . '%' expr
   84 variable: expr . '[' expr ']'
   86         | expr . '.' TOK_IDENT

    TOK_EQ  shift, and go to state 83
    TOK_NE  shift, and go to state 84
    TOK_LT  shift, and go to state 85
    TOK_LE  shift, and go to state 86
    TOK_GT  shift, and go to state 87
    TOK_GE  shift, and go to state 88
    '='     shift, and go to state 89
    '+'     shift, and go to state 90
    '-'     shift, and go to state 91
    '*'     shift, and go to state 92
    '/'     shift, and go to state 93
    '%'     shift, and go to state 94
    '['     shift, and go to state 95
    '.'     shift, and go to state 96
    ';'     shift, and go to state 97


state 44

   34 statement: vardecl .

    $default  reduce using rule 34 (statement)


state 45

   54 expr: allocator .

    $default  reduce using rule 54 (expr)


state 46

   55 expr: call .

    $default  reduce using rule 55 (expr)


state 47

   56 expr: variable .

    $default  reduce using rule 56 (expr)


state 48

   57 expr: constant .

    $default  reduce using rule 57 (expr)


state 49

    5 program: program error '}' .

    $default  reduce using rule 5 (program)


state 50

    6 program: program error ';' .

    $default  reduce using rule 6 (program)


state 51

   42 if: TOK_IF '(' . expr ')' statement

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 53
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 23
    TOK_CHR        shift, and go to state 24
    '('            shift, and go to state 25
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '!'            shift, and go to state 29
    '.'            shift, and go to state 30

    expr       go to state 98
    allocator  go to state 45
    call       go to state 46
    variable   go to state 47
    constant   go to state 48


state 52

   39 while: TOK_WHILE '(' . expr ')' statement

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 53
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 23
    TOK_CHR        shift, and go to state 24
    '('            shift, and go to state 25
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '!'            shift, and go to state 29
    '.'            shift, and go to state 30

    expr       go to state 99
    allocator  go to state 45
    call       go to state 46
    variable   go to state 47
    constant   go to state 48


state 53

   82 call: TOK_IDENT . argslist ')'
   83     | TOK_IDENT . '(' ')'
   85 variable: TOK_IDENT .

    '('  shift, and go to state 62

    $default  reduce using rule 85 (variable)

    argslist  go to state 63


state 54

   45 return: TOK_RETURN ';' .

    $default  reduce using rule 45 (return)


state 55

   44 return: TOK_RETURN expr . ';'
   58 expr: expr . '=' expr
   59     | expr . TOK_EQ expr
   60     | expr . TOK_NE expr
   61     | expr . TOK_LT expr
   62     | expr . TOK_LE expr
   63     | expr . TOK_GT expr
   64     | expr . TOK_GE expr
   65     | expr . '+' expr
   66     | expr . '-' expr
   67     | expr . '/' expr
   68     | expr . '*' expr
   69     | expr . '%' expr
   84 variable: expr . '[' expr ']'
   86         | expr . '.' TOK_IDENT

    TOK_EQ  shift, and go to state 83
    TOK_NE  shift, and go to state 84
    TOK_LT  shift, and go to state 85
    TOK_LE  shift, and go to state 86
    TOK_GT  shift, and go to state 87
    TOK_GE  shift, and go to state 88
    '='     shift, and go to state 89
    '+'     shift, and go to state 90
    '-'     shift, and go to state 91
    '*'     shift, and go to state 92
    '/'     shift, and go to state 93
    '%'     shift, and go to state 94
    '['     shift, and go to state 95
    '.'     shift, and go to state 96
    ';'     shift, and go to state 100


state 56

   18 structdef: TOK_STRUCT TOK_IDENT . fielddeclst '}'
   19          | TOK_STRUCT TOK_IDENT . '{' '}'

    '{'  shift, and go to state 101

    fielddeclst  go to state 102


state 57

   50 basetype: TOK_STRING .
   79 allocator: TOK_NEW TOK_STRING . '(' expr ')'

    '('  shift, and go to state 103

    $default  reduce using rule 50 (basetype)


state 58

   78 allocator: TOK_NEW TOK_IDENT . '(' ')'
   81          | TOK_NEW TOK_IDENT . '[' expr ']'

    '('  shift, and go to state 104
    '['  shift, and go to state 105


state 59

   80 allocator: TOK_NEW basetype . '[' expr ']'

    '['  shift, and go to state 106


state 60

   16 identdecl: TOK_IDENT TOK_ARRAY . TOK_IDENT

    TOK_IDENT  shift, and go to state 107


state 61

   17 identdecl: TOK_IDENT TOK_IDENT .

    $default  reduce using rule 17 (identdecl)


state 62

   53 argslist: '(' . expr
   83 call: TOK_IDENT '(' . ')'

    TOK_FALSE      shift, and go to state 14
    TOK_TRUE       shift, and go to state 15
    TOK_NULL       shift, and go to state 16
    TOK_NEW        shift, and go to state 17
    TOK_IDENT      shift, and go to state 53
    TOK_INTCON     shift, and go to state 19
    TOK_CHARCON    shift, and go to state 20
    TOK_STRINGCON  shift, and go to state 21
    TOK_ORD        shift, and go to state 23
    TOK_CHR        shift, and go to state 24
    '('            shift, and go to state 25
    ')'            shift, and go to state 108
    '+'            shift, and go to state 27
    '-'            shift, and go to state 28
    '!'            shift, and go to state 29
    '.'            shift, and go to state 30

    expr       go to state 109
    allocator  go to state 45
    call       go to state 46
    variable   go to state 47
    constant   go to state 48


state 63

   52 argslist: argslist . ',' expr
   82 call: TOK_IDENT argslist . ')'

    ')'  shift, and go to state 110
    ','  shift, and go to state 111


state 64

   58 expr: expr . '=' expr
   59     | expr . TOK_EQ expr
   60     | expr . TOK_NE expr
   61     | expr . TOK_LT expr
   62     | expr . TOK_LE expr
   63     | expr . TOK_GT expr
   64     | expr . TOK_GE expr
   65     | expr . '+' expr
   66     | expr . '-' expr
   67     | expr . '/' expr
   68     | expr . '*' expr
   69     | expr . '%' expr
   72     | TOK_ORD expr .
   84 variable: expr . '[' expr ']'
   86         | expr . '.' TOK_IDENT

    '['  shift, and go to state 95
    '.'  shift, and go to state 96

    $default  reduce using rule 72 (expr)


state 65

   58 expr: expr . '=' expr
   59     | expr . TOK_EQ expr
   60     | expr . TOK_NE expr
   61     | expr . TOK_LT expr
   62     | expr . TOK_LE expr
   63     | expr . TOK_GT expr
   64     | expr . TOK_GE expr
   65     | expr . '+' expr
   66     | expr . '-' expr
   67     | expr . '/' expr
   68     | expr . '*' expr
   69     | expr . '%' expr
   73     | TOK_CHR expr .
   84 variable: expr . '[' expr ']'
   86         | expr . '.' TOK_IDENT

    '['  shift, and go to state 95
    '.'  shift, and go to state 96

    $default  reduce using rule 73 (expr)


state 66

   58 expr: expr . '=' expr
   59     | expr . TOK_EQ expr
   60     | expr . TOK_NE expr
   61     | expr . TOK_LT expr
   62     | expr . TOK_LE expr
   63     | expr . TOK_GT expr
   64     | expr . TOK_GE expr
   65     | expr . '+' expr
   66     | expr . '-' expr
   67     | expr . '/' expr
   68     | expr . '*' expr
   69     | expr . '%' expr
   76     | '(' expr . ')'
   84 variable: expr . '[' expr ']'
   86         | expr . '.' TOK_IDENT

    TOK_EQ  shift, and go to state 83
    TOK_NE  shift, and go to state 84
    TOK_LT  shift, and go to state 85
    TOK_LE  shift, and go to state 86
    TOK_GT  shift, and go to state 87
    TOK_GE  shift, and go to state 88
    ')'     shift, and go to state 112
    '='     shift, and go to state 89
    '+'     shift, and go to state 90
    '-'     shift, and go to state 91
    '*'     shift, and go to state 92
    '/'     shift, and go to state 93
    '%'     shift, and go to state 94
    '['     shift, and go to state 95
    '.'     shift, and go to state 96


state 67

   27 block: '{' '}' .

    $default  reduce using rule 27 (block)


state 68

   77 vardecl: identdecl . '=' expr ';'

    '='  shift, and go to state 75


state 69

   32 stmtlist: '{' statement .

    $default  reduce using rule 32 (stmtlist)


state 70

   58 expr: expr . '=' expr
   59     | expr . TOK_EQ expr
   60     | expr . TOK_NE expr
   61     | expr . TOK_LT expr
   62     | expr . TOK_LE expr
   63     | expr . TOK_GT expr
   64     | expr . TOK_GE expr
   65     | expr . '+' expr
   66     | expr . '-' expr
   67     | expr . '/' expr
   68     | expr . '*' expr
   69     | expr . '%' expr
   71     | '+' expr .
   84 variable: expr . '[' expr ']'
   86         | expr . '.' TOK_IDENT

    '*'  shift, and go to state 92
    '/'  shift, and go to state 93
    '%'  shift, and go to state 94
    '['  shift, and go to state 95
    '.'  shift, and go to state 96

    $default  reduce using rule 71 (expr)


state 71

   58 expr: expr . '=' expr
   59     | expr . TOK_EQ expr
   60     | expr . TOK_NE expr
   61     | expr . TOK_LT expr
   62     | expr . TOK_LE expr
   63     | expr . TOK_GT expr
   64     | expr . TOK_GE expr
   65     | expr . '+' expr
   66     | expr . '-' expr
   67     | expr . '/' expr
   68     | expr . '*' expr
   69     | expr . '%' expr
   70     | '-' expr .
   84 variable: expr . '[' expr ']'
   86         | expr . '.' TOK_IDENT
